--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>自己紹介ページ</title>
-    <style>
-        h1 span{
-            color: red; 
-        }
-        p{
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>私の名前は山田太郎です</h1>
