--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>私の名前は山田太郎です</h1>
+    <h1>私の名前は<span>山田太郎</span>です</h1>
     <p>こんにちは</p>
     <p>プログラミング<span>初心者です</span></p>
     <p>破壊</p>
